# jarvis

./: .gitignore  pyproject.toml
src/jarvis/: __main__.py  stt.py  tts.py
