[project]
name = "jarvis"
version = "0.1.0"
description = ""
authors = [
    {name = "Usman22209",email = "166890135+Usman22209@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "jarvis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
