[project]
name = "jarvis"
version = "0.1.0"
description = ""
authors = [
    { name = "Usman22209", email = "166890135+Usman22209@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyttsx3 (>=2.99,<3.0)",
    "speechrecognition (>=3.14.3,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "jarvis", from = "src" }]

[tool.poetry.scripts]
jarvis = "jarvis.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
